# the-nitpicker

./: README.md  main.py  pr_review_client.py  pr_review_server.py  pyproject.toml
docs/: pr_review_eval_strategy.md
docs/adr/: 0001-use-custom-mcp-server-for-github-integration.md
evaluation/: README.md  dataset_creator.py
evaluation/datasets/: bug_detection.jsonl  clean_code.jsonl
src/: github_helpers.py  pr_review_client.py  pr_review_server.py
